--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.3",
     "depcheck": "^1.4.7",
     "tailwindcss": "^3.4.1"
   }
